# vektra-ai-meter

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml
cli/: ai-meter
scripts/: bootstrap.sh  install-layer-shell.sh
src/ai_tracker/: __init__.py  config.py  layer_shell.py  topbar.py  widget_gtk.py
src/ai_tracker/providers/: claude.py  codex.py
src/vektra_ai_meter/: __init__.py  _version.py  autostart.py  cli.py  config.py  gtk_launch.py  integrate.py  ipc.py  layershell.py  limits.py  paths.py  popup_server.py  snapshot.py  topbar.py  update.py  util.py
src/vektra_ai_meter/providers/: __init__.py  claude.py  codex.py  grok.py
src/vektra_ai_meter/ui/: __init__.py  cosmic.py  gtk_popup.py  icon.py  panel.py  placement.py  theme.py  wayland.py
widget/conky/: ai-meter.conkyrc
widget/eww/: ai-tracker.scss  ai-tracker.yuck
widget/waybar/: module.sh
