[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vektra-ai-meter"
version = "0.3.5"
description = "Top-bar AI usage meter for Grok Build, Codex, and Claude Code on Linux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vektra Industries" }]
dependencies = [
  "PySide6>=6.6",
]

[project.scripts]
ai-meter = "vektra_ai_meter.cli:main"

[project.urls]
Homepage = "https://vektraindustries.com/ai-tracker"
Repository = "https://github.com/PabloTheThinker/vektra-ai-meter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vektra_ai_meter = ["assets/*.png"]